@startuml Animal Sanctuary

class Pets{
  +pets_id
  +pets_name
  +pets_age
  +pets_gender
  +pets_neutered
  -pets_price
  +__construct()
  +get_pets_name()
  +get_pets_age()
  +get_pets_gender()
  +get_pets_neutered()
  +get_pets_price() 
}

class Species extends Pets{
  +species_id
  +species_name
  -species_price
  +__construct()
  +get_species_name()
  +get_species_price()
}

class Breeds extends Species{
  +breeds_id
  +breeds_name
  +breeds_is_mixed
  -breeds_price
  +__construct()
  +get_breeds_name()
  +get_breeds_is_mixed()
  +get_breeds_price()
}

class Toys {
  +toys_id
  +toys_name
  -toys_price
  +__construct()
  +get_toy_name()
  +get_toys_price()
}

Pets --> Species :
Species --> Breeds :
Breeds --> Toys :

@enduml